eks/PV/PV/Jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: jenkins
spec:
 replicas: 1
 selector:
   matchLabels:
     app: jenkins-app
 template:
  metadata:
   labels:
    app: jenkins-app
  spec:
   securityContext:
     fsGroup: 1000
   containers:
   - name: jenkins
     imagePullPolicy: IfNotPresent
     image: jenkins/jenkins:lts
     ports:
     - containerPort: 8080
     volumeMounts:
       - mountPath: /var/jenkins_home
         name: jenkins-home
   volumes:
     - name: jenkins-home
       persistentVolumeClaim:
         claimName: jenkins-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: jenkins-app
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-routing
  annotations:
    # External DNS
    external-dns.alpha.kubernetes.io/hostname: jenkins.enjoylife.org.in
    # SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:304370290957:certificate/9856e57a-fbc2-4866-9417-5cb82a1066fd
    # SSL Redirect Setting
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    # Ingress Core Settings
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /login
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
spec:
  rules:
    - host: jenkins.enjoylife.org.in
      http:
        paths:
          - path: /*
            backend:
              serviceName: jenkins-svc
              servicePort: 80
